--- a/travis.yml
+++ b/travis.yml
@@ -1,6 +1,8 @@
 language: python
 python:
   - "2.7"
+  before_install:
+  - gem install jasmine
 before_script:
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
