--- a/travis.yml
+++ b/travis.yml
@@ -6,4 +6,4 @@ before_script:
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
   - "rake clean"
-script: "rake jasmine:ci"
+script: "rake jasmine:ci JASMINE_PORT=1337"
