--- a/travis.yml
+++ b/travis.yml
@@ -1,7 +1,9 @@
-language: node_js
-node_js:
-  - 0.6
+rvm:
+  - 1.9.3
+bundler_args: --without development
 before_script:
+  - "git submodule update --init"
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
-script: phantomjs test/run-jasmine.js src/tests/index.html
+  - "rake clean"
+script: "rake jasmine:ci JASMINE_PORT=1337"
